force-app/main/default/objects/Sandbox__c/Sandbox__c.object-meta.xml
<CustomObject>
    <label>Sandbox</label>
    <nameField>
        <label>Sandbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandbox</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>