force-app/main/default/objects/Sandbox__c/fields/Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>Domain_URL__c</fullName>
    <label>Domain URL</label>
    <length>96</length>
    <type>Text</type>
</CustomField>