force-app/main/default/objects/Sandbox__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>96</length>
    <type>Text</type>
</CustomField>