force-app/main/default/objects/Sandbox__c/fields/Sandbox_ID__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_ID__c</fullName>
    <label>Sandbox ID</label>
    <length>96</length>
    <type>Text</type>
</CustomField>